--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,32 +1,158 @@
+
+#############
+## General ##
+#############
+
+set -g default-terminal "screen-256color" #colors
+setw -g xterm-keys on
+set -s escape-time 10       # faster command sequences
+set -sg repeat-time 600     # increase repeat timeout
+set -s focus-events on 
+
+# Automatically set window title
+set-window-option -g automatic-rename on 
+set-option -g set-titles on
+
+# Index from 1
+set -g base-index 1
+set -g pane-base-index 1
+
+set -g renumber-windows on  # renumber windows when a window is closed
+set -g status-interval 5 # redraw status line every 10 sec
+
+set -g set-titles on        # set terminal title
+
+set -g history-limit 500000   # boost history
+
+# activity
+set -g monitor-activity on
+set -g visual-activity off
+
+##############
+## Bindings ##
+##############
+
 # Remap prefix from C-b to Ca
 unbind C-b
 set-option -g prefix C-a
 bind-key C-a send-prefix
 
+# Bind D to resize the window to be 8 lines smaller
+bind D resize-pane -D 8
 
-# Split panes using | and -
-bind | split-window -h
-bind - split-window -v
+
+# Use | and - to split a window vertically and horizontally instead of " and % respoectively
 unbind '"'
 unbind %
-
-
-# Reload config file
-bind r source-file ~/.tmux.conf
-
+bind | split-window -h -c "#{pane_current_path}"
+bind - split-window -v -c "#{pane_current_path}"
 
 # Switch panes using Alt-hjkl without prefix
-bind -n M-l select-pane -L
-bind -n M-h select-pane -R
-bind -n M-k select-pane -U
+bind -n M-h select-pane -L
 bind -n M-j select-pane -D
+bind -n M-k select-pane -U
+bind -n M-l select-pane -R
 
-# Don't rename windows automaticallyu
-set-option -g allow-rename off
+# Use Shift + arrow key to move between windows in a session
+bind -n S-Left next-window
+bind -n S-Right previous-window
 
+# Open ~/.tmux.conf in vim and reload settings on quit
+unbind e
+bind e new-window -n '~/.tmux.conf' "sh -c 'nvim ~/.tmux.conf && tmux source ~/.tmux.conf'"
+
+# use r to quickly reload tmux settings
+unbind r
+bind r \
+        source-file ~/.tmux.conf \;\
+        display 'Reloaded tmux config'
+
+# use a to toggle synchronize panes
+bind a set-window-option synchronize-panes
+
+# Prefix + / to search
+bind-key / copy-mode \; send-key ?
+
+# Prefix + h to clear screen and history buffer
+bind y \
+    send-keys "C-c; clear && tmux clear-history" \;\
+    send-keys "Enter" \;\
+    display 'Screen cleared'
+
+# Setup 'v' to begin selection, just like Vim
+bind-key -T copy-mode-vi 'v' send -X begin-selection
+
+ # Setup 'y' to yank (copy), just like Vim
+bind-key -T copy-mode-vi 'y' send -X copy-pipe-and-cancel "pbcopy"
+bind-key -T copy-mode-vi 'V' send -X select-line
+bind-key -T copy-mode-vi 'r' send -X rectangle-toggle
 
 ####################
 ## DESIGN SECTION ## 
 ####################
+
+# Default window with an activity alert
+set-window-option -g window-status-activity-style bg=colour237,fg=colour248 # bg=bg1, fg=fg3
+
+set -g status-bg colour237
+set -g status-fg white
+
+set -g status-left-length 100
+set -g status-right 100
+
+set-option -g status-left "\
+#[fg=colour7,bold bg=colour242]#{?client_prefix,#[bg=colour167],}  #S \
+#[fg=colour242, bg=colour237]#{?client_prefix,#[fg=colour167],} \
+#[fg=colour1]$USER@#H ♥ "
+
+set-option -g status-right "\
+#{?window_zoomed_flag,  ,} \
+#[fg=colour7, bg=colour237] #(~/Scripts/internet_conn_monitor.sh) \
+#[fg=colour242,bold bg=colour237] \
+#[fg=colour7,bold bg=colour242]   %D\
+#[fg=colour7,bold]  %H:%M \
+"
+
+set-window-option -g window-status-current-format "\
+#[fg=colour237, bg=green]\
+#[fg=colour237, bg=green] #I* \
+#[fg=colour237, bg=green, bold] #W \
+#[fg=green, bg=colour237]"
+
+set-window-option -g window-status-format "\
+#[fg=colour237,bg=colour242,noitalics]\
+#[fg=white,bold,bg=colour242] #I \
+#[fg=white,bold,bg=colour242] #W \
+#[fg=colour242, bg=colour237]"
+
+
+###############
+## TMUX VARS ##
+###############
+
+#colour0 (black)
+#colour1 (red )
+#colour2 (green)
+#colour3 (yellow)
+#colour4 (blue)
+#colour7 (white)
+#colour5 colour6 colour7 colour8 colour9 colour10 colour11 colour12 colour13 colour14 colour15 colour16 colour17   
+
+#D ()
+#F ()
+#H (hostname)
+#I (window index)
+#P ()
+#S (session index)
+#T (pane title)
+#W (Current task)
+
+#############
+## Plugins ##
+#############
+
+# List of Plugins 
+set -g @plugin 'tmux-plugins/tpm'
+run -b '~/.tmux/plugins/tpm/tpm'
 
 
