some minor changes

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,7 +3,22 @@
 ## General ##
 #############
 
-set -g default-terminal "screen-256color" #colors
+TERM=screen-256color
+PRIMARY=green
+DARK_GRAY=colour237
+GRAY=colour242
+ALERT=colour167
+WHITE=colour7
+RIGHT_ARROW=
+LEFT_ARROW=
+LEFT_ARROW_THIN=
+SESSION_ICON=
+HEART_ICON=♥
+ZOOM_ICON=
+PLUG_ICON=
+CPU_ICON=
+
+set -g default-terminal $TERM
 setw -g xterm-keys on
 set -s escape-time 10       # faster command sequences
 set -sg repeat-time 600     # increase repeat timeout
@@ -23,7 +38,7 @@ set -g status-interval 5 # redraw status line every 10 sec
 set -g set-titles on        # set terminal title
 
 set -g history-limit 500000   # boost history
-
+set -g display-time 2000
 # activity
 set -g monitor-activity on
 set -g visual-activity off
@@ -91,61 +106,44 @@ bind-key -T copy-mode-vi 'r' send -X rectangle-toggle
 ## DESIGN SECTION ## 
 ####################
 
-# Default window with an activity alert
-set-window-option -g window-status-activity-style bg=colour237,fg=colour248 # bg=bg1, fg=fg3
+# Message info
+# set-option -g message-style bg=colour239,fg=colour223
 
-set -g status-bg colour237
-set -g status-fg white
+# Default window with an activity alert
+set-window-option -g window-status-activity-style bg=$DARK_GRAY,fg=$DARK_GRAY 
+
+set -g status-bg $DARK_GRAY
+set -g status-fg $WHITE
 
 set -g status-left-length 100
-set -g status-right 100
+set -g status-right 2010 
 
 set-option -g status-left "\
-#[fg=colour7,bold bg=colour242]#{?client_prefix,#[bg=colour167],}  #S \
-#[fg=colour242, bg=colour237]#{?client_prefix,#[fg=colour167],} \
-#[fg=colour1]$USER@#H ♥ "
+#[fg=$WHITE,bold bg=$GRAY]#{?client_prefix,#[bg=$ALERT],} $SESSION_ICON #S \
+#[fg=$GRAY, bg=$DARK_GRAY]#{?client_prefix,#[fg=$ALERT],}$LEFT_ARROW \
+#[fg=$ALERT]$USER@#H $HEART_ICON "
 
 set-option -g status-right "\
-#{?window_zoomed_flag,  ,} \
-#[fg=colour7, bg=colour237] #(~/Scripts/internet_conn_monitor.sh) \
-#[fg=colour242,bold bg=colour237] \
-#[fg=colour7,bold bg=colour242]   %D\
-#[fg=colour7,bold]  %H:%M \
+#{?window_zoomed_flag, #[fg=red]$ZOOM_ICON ,} \
+#{cpu_fg_color} #{cpu_icon} #{cpu_percentage} \
+#[bg=$DARK_GRAY] #(~/Scripts/internet_conn_monitor.sh) \
+#[fg=$GRAY,bold bg=$DARK_GRAY] $RIGHT_ARROW\
+#[fg=$WHITE,bold bg=$GRAY]  %D\
+#[fg=$WHITE,bold]  %H:%M \
 "
 
 set-window-option -g window-status-current-format "\
-#[fg=colour237, bg=green]\
-#[fg=colour237, bg=green] #I* \
-#[fg=colour237, bg=green, bold] #W \
-#[fg=green, bg=colour237]"
+#[fg=$DARK_GRAY, bg=$PRIMARY]$LEFT_ARROW \
+#[fg=$DARK_GRAY, bg=$PRIMARY] #I* $LEFT_ARROW_THIN\
+#[fg=$DARK_GRAY, bg=$PRIMARY, bold] #W \
+#[fg=$PRIMARY, bg=$DARK_GRAY]$LEFT_ARROW"
 
 set-window-option -g window-status-format "\
-#[fg=colour237,bg=colour242,noitalics]\
-#[fg=white,bold,bg=colour242] #I \
-#[fg=white,bold,bg=colour242] #W \
-#[fg=colour242, bg=colour237]"
+#[fg=$DARK_GRAY,bg=$GRAY,noitalics]$LEFT_ARROW\
+#[fg=white,bold,bg=$GRAY] #I $LEFT_ARROW_THIN\
+#[fg=white,bold,bg=$GRAY] #W \
+#[fg=$GRAY, bg=$DARK_GRAY]$LEFT_ARROW"
 
-
-###############
-## TMUX VARS ##
-###############
-
-#colour0 (black)
-#colour1 (red )
-#colour2 (green)
-#colour3 (yellow)
-#colour4 (blue)
-#colour7 (white)
-#colour5 colour6 colour7 colour8 colour9 colour10 colour11 colour12 colour13 colour14 colour15 colour16 colour17   
-
-#D ()
-#F ()
-#H (hostname)
-#I (window index)
-#P ()
-#S (session index)
-#T (pane title)
-#W (Current task)
 
 #############
 ## Plugins ##
@@ -153,6 +151,13 @@ set-window-option -g window-status-format "\
 
 # List of Plugins 
 set -g @plugin 'tmux-plugins/tpm'
-run -b '~/.tmux/plugins/tpm/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @plugin 'tmux-plugins/tmux-cpu'
+set -g @plugin 'tmux-plugins/tmux-pain-control'
 
+
+set -g @continuum-restore 'on' 
+run -b '~/.tmux/plugins/tpm/tpm'
 
