config files from new laptop

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,9 +2,8 @@
 #############
 ## General ##
 #############
-
 TERM=screen-256color
-PRIMARY=green
+PRIMARY='#98c379'
 DARK_GRAY=colour237
 GRAY=colour242
 ALERT=colour167
@@ -135,7 +134,7 @@ set-option -g status-right "\
 set-window-option -g window-status-current-format "\
 #[fg=$DARK_GRAY, bg=$PRIMARY]$LEFT_ARROW \
 #[fg=$DARK_GRAY, bg=$PRIMARY] #I* $LEFT_ARROW_THIN\
-#[fg=$DARK_GRAY, bg=$PRIMARY, bold] #W \
+#[fg=$DARK_GRAY, bg=$PRIMARY] #W \
 #[fg=$PRIMARY, bg=$DARK_GRAY]$LEFT_ARROW"
 
 set-window-option -g window-status-format "\
@@ -158,6 +157,6 @@ set -g @plugin 'tmux-plugins/tmux-cpu'
 set -g @plugin 'tmux-plugins/tmux-pain-control'
 
 
-set -g @continuum-restore 'on' 
+set -g @continuum-restore 'off' 
 run -b '~/.tmux/plugins/tpm/tpm'
 
