tmux.conf  vi-like bindings

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -17,15 +17,18 @@ ZOOM_ICON=
 PLUG_ICON=
 CPU_ICON=
 
-set -g default-terminal $TERM
-setw -g xterm-keys on
-set -s escape-time 10       # faster command sequences
-set -sg repeat-time 600     # increase repeat timeout
+
+
+set -g default-terminal $TERM       # 256 colours 
+setw -g xterm-keys on       
+set -s escape-time 10               # faster command sequences
+set -sg repeat-time 600             # increase repeat timeout
 set -s focus-events on 
 
+# Vi-like bindings
+set-window-option -g mode-keys vi
 # Automatically set window title
 set-window-option -g automatic-rename on 
-set-option -g set-titles on
 
 # Index from 1
 set -g base-index 1
@@ -54,7 +57,6 @@ bind-key C-a send-prefix
 # Bind D to resize the window to be 8 lines smaller
 bind D resize-pane -D 8
 
-
 # Use | and - to split a window vertically and horizontally instead of " and % respoectively
 unbind '"'
 unbind %
@@ -73,7 +75,7 @@ bind -n S-Right previous-window
 
 # Open ~/.tmux.conf in vim and reload settings on quit
 unbind e
-bind e new-window -n '~/.tmux.conf' "sh -c 'nvim ~/.tmux.conf && tmux source ~/.tmux.conf'"
+bind e new-window -n '~/.tmux.conf' "sh -c 'vim ~/.tmux.conf && tmux source ~/.tmux.conf'"
 
 # use r to quickly reload tmux settings
 unbind r
