tmux last version

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,12 +1,38 @@
+####################################
+## One Dark Gnome Terminal Colors ##
+####################################
+
+BLACK='#000000'        
+BRIGHT_BLACK='#5C6370'        
+RED='#E06C75'        
+BRIGHT_RED='#E06C75'        
+GREEN='#98C379'        
+BRIGHT_GREEN='#98C379'        
+YELLOW='#D19A66'        
+BRIGHT_YELLOW='#D19A66'        
+BLUE='#61AFEF'        
+LIGHT_BLUE='#61AFEF'        
+MAGENTA='#C678DD'        
+LIGHT_MAGENTA='#C678DD'        
+CYAN='#56B6C2'        
+LIGHT_CYAN='#56B6C2'        
+WHITE=#ABB2BF        
+BRIGHT_WHITE=#FFFFFF        
+TEXT='#5C6370'        
+BOLD_TEXT='#ABB2BF'        
+SELECTION='#3A3F4B'        
+CURSOR='#5C6370'        
+BACKGROUND='#1E2127'        
 
 #############
 ## General ##
 #############
 TERM=screen-256color
 PRIMARY='#98c379'
-DARK_GRAY=colour237
-GRAY=colour242
-ALERT=colour167
+DARK_GRAY=$BACKGROUND
+# DARK_GRAY=colour237
+GRAY=$SELECTION
+ALERT=$BRIGHT_RED
 WHITE=colour7
 RIGHT_ARROW=
 LEFT_ARROW=
@@ -28,7 +54,7 @@ set -s focus-events on
 # Vi-like bindings
 set-window-option -g mode-keys vi
 # Automatically set window title
-set-window-option -g automatic-rename on 
+set-window-option -g automatic-rename off 
 
 # Index from 1
 set -g base-index 1
@@ -37,7 +63,7 @@ set -g pane-base-index 1
 set -g renumber-windows on  # renumber windows when a window is closed
 set -g status-interval 5 # redraw status line every 10 sec
 
-set -g set-titles on        # set terminal title
+set -g set-titles off        # set terminal title
 
 set -g history-limit 500000   # boost history
 set -g display-time 2000
@@ -75,7 +101,7 @@ bind -n S-Right previous-window
 
 # Open ~/.tmux.conf in vim and reload settings on quit
 unbind e
-bind e new-window -n '~/.tmux.conf' "sh -c 'vim ~/.tmux.conf && tmux source ~/.tmux.conf'"
+bind e new-window -n '~/.tmux.conf' "sh -c 'nvim ~/.tmux.conf && tmux source ~/.tmux.conf'"
 
 # use r to quickly reload tmux settings
 unbind r
@@ -117,22 +143,13 @@ set -g status-bg $DARK_GRAY
 set -g status-fg $WHITE
 
 set -g status-left-length 100
-set -g status-right 2010 
 
 set-option -g status-left "\
 #[fg=$WHITE,bold bg=$GRAY]#{?client_prefix,#[bg=$ALERT],} $SESSION_ICON #S \
 #[fg=$GRAY, bg=$DARK_GRAY]#{?client_prefix,#[fg=$ALERT],}$LEFT_ARROW \
 #[fg=$ALERT]$USER@#H $HEART_ICON "
 
-set-option -g status-right "\
-#{?window_zoomed_flag, #[fg=red]$ZOOM_ICON ,} \
-#{cpu_fg_color} #{cpu_icon} #{cpu_percentage} \
-#[bg=$DARK_GRAY] #(~/Scripts/internet_conn_monitor.sh) \
-#[fg=$GRAY,bold bg=$DARK_GRAY] $RIGHT_ARROW\
-#[fg=$WHITE,bold bg=$GRAY]  %D\
-#[fg=$WHITE,bold]  %H:%M \
-"
-
+set -g status-right ''
 set-window-option -g window-status-current-format "\
 #[fg=$DARK_GRAY, bg=$PRIMARY]$LEFT_ARROW \
 #[fg=$DARK_GRAY, bg=$PRIMARY] #I* $LEFT_ARROW_THIN\
