added i3 polybar ncmpcpp

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,84 +1,16 @@
-####################################
-## One Dark Gnome Terminal Colors ##
-####################################
 
-BLACK='#000000'        
-BRIGHT_BLACK='#5C6370'        
-RED='#E06C75'        
-BRIGHT_RED='#E06C75'        
-GREEN='#98C379'        
-BRIGHT_GREEN='#98C379'        
-YELLOW='#D19A66'        
-BRIGHT_YELLOW='#D19A66'        
-BLUE='#61AFEF'        
-LIGHT_BLUE='#61AFEF'        
-MAGENTA='#C678DD'        
-LIGHT_MAGENTA='#C678DD'        
-CYAN='#56B6C2'        
-LIGHT_CYAN='#56B6C2'        
-WHITE=#ABB2BF        
-BRIGHT_WHITE=#FFFFFF        
-TEXT='#5C6370'        
-BOLD_TEXT='#ABB2BF'        
-SELECTION='#3A3F4B'        
-CURSOR='#5C6370'        
-BACKGROUND='#1E2127'        
-
-#############
-## General ##
-#############
-TERM=screen-256color
-PRIMARY='#98c379'
-DARK_GRAY=$BACKGROUND
-# DARK_GRAY=colour237
-GRAY=$SELECTION
-ALERT=$BRIGHT_RED
-WHITE=colour7
-RIGHT_ARROW=
-LEFT_ARROW=
-LEFT_ARROW_THIN=
-SESSION_ICON=
-HEART_ICON=♥
-ZOOM_ICON=
-PLUG_ICON=
-CPU_ICON=
-
-
-
-set -g default-terminal $TERM       # 256 colours 
-setw -g xterm-keys on       
-set -s escape-time 10               # faster command sequences
-set -sg repeat-time 600             # increase repeat timeout
-set -s focus-events on 
-
-# Vi-like bindings
-set-window-option -g mode-keys vi
-# Automatically set window title
-set-window-option -g automatic-rename off 
-
-# Index from 1
-set -g base-index 1
-set -g pane-base-index 1
-
-set -g renumber-windows on  # renumber windows when a window is closed
-set -g status-interval 5 # redraw status line every 10 sec
-
-set -g set-titles off        # set terminal title
-
-set -g history-limit 500000   # boost history
-set -g display-time 2000
-# activity
-set -g monitor-activity on
-set -g visual-activity off
-
-##############
+############
 ## Bindings ##
 ##############
 
-# Remap prefix from C-b to Ca
+# Remap prefix from C-b to C-a
 unbind C-b
 set-option -g prefix C-a
 bind-key C-a send-prefix
+
+# To quickly toggle between the last two windows, set the last-window
+# command to the same key as $PREFIX
+bind-key C-a last-window
 
 # Bind D to resize the window to be 8 lines smaller
 bind D resize-pane -D 8
@@ -110,7 +42,7 @@ bind r \
         display 'Reloaded tmux config'
 
 # use a to toggle synchronize panes
-bind a set-window-option synchronize-panes
+bind e set-window-option synchronize-panes
 
 # Prefix + / to search
 bind-key / copy-mode \; send-key ?
@@ -129,39 +61,42 @@ bind-key -T copy-mode-vi 'y' send -X copy-pipe-and-cancel "pbcopy"
 bind-key -T copy-mode-vi 'V' send -X select-line
 bind-key -T copy-mode-vi 'r' send -X rectangle-toggle
 
-####################
-## DESIGN SECTION ## 
-####################
+##############
+## SETTINGS ##
+##############
 
-# Message info
-# set-option -g message-style bg=colour239,fg=colour223
+set -sg escape-time 1
+set -g default-terminal "tmux-256color"       # 256 colours 
+set -ga terminal-overrides ",*256col*:Tc"
+setw -g xterm-keys on       
+set -sg repeat-time 600             # increase repeat timeout
+set -s focus-events on 
 
-# Default window with an activity alert
-set-window-option -g window-status-activity-style bg=$DARK_GRAY,fg=$DARK_GRAY 
+# Vi-like bindings
+set-window-option -g mode-keys vi
 
-set -g status-bg $DARK_GRAY
-set -g status-fg $WHITE
+# Automatically set window title
+set-window-option -g automatic-rename on 
 
-set -g status-left-length 100
+# Index from 1
+set -g base-index 1
+set -g pane-base-index 1
 
-set-option -g status-left "\
-#[fg=$WHITE,bold bg=$GRAY]#{?client_prefix,#[bg=$ALERT],} $SESSION_ICON #S \
-#[fg=$GRAY, bg=$DARK_GRAY]#{?client_prefix,#[fg=$ALERT],}$LEFT_ARROW \
-#[fg=$ALERT]$USER@#H $HEART_ICON "
+set -g renumber-windows on  # renumber windows when a window is closed
+set -g status-interval 5 # redraw status line every 10 sec
 
-set -g status-right ''
-set-window-option -g window-status-current-format "\
-#[fg=$DARK_GRAY, bg=$PRIMARY]$LEFT_ARROW \
-#[fg=$DARK_GRAY, bg=$PRIMARY] #I* $LEFT_ARROW_THIN\
-#[fg=$DARK_GRAY, bg=$PRIMARY] #W \
-#[fg=$PRIMARY, bg=$DARK_GRAY]$LEFT_ARROW"
+set -g set-titles off        # set terminal title
 
-set-window-option -g window-status-format "\
-#[fg=$DARK_GRAY,bg=$GRAY,noitalics]$LEFT_ARROW\
-#[fg=white,bold,bg=$GRAY] #I $LEFT_ARROW_THIN\
-#[fg=white,bold,bg=$GRAY] #W \
-#[fg=$GRAY, bg=$DARK_GRAY]$LEFT_ARROW"
+set -g history-limit 500000   # boost history
+set -g display-time 2000
 
+# Activity
+set-option -g allow-rename off
+set-option -g monitor-activity on
+set-option -g visual-activity off
+
+# Show/Hide Status
+bind-key q set-option status
 
 #############
 ## Plugins ##
@@ -174,8 +109,52 @@ set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'tmux-plugins/tmux-cpu'
 set -g @plugin 'tmux-plugins/tmux-pain-control'
+set -g @plugin 'jimeh/tmux-themepack'
+# set -g @plugin 'odedlaz/tmux-onedark-theme'
 
-
+#############
+## Options ##
+#############
 set -g @continuum-restore 'off' 
+
+##################
+## tmux-onedark ##
+##################
+# set -g @onedark_widgets "#(date +%s)"
+
+###############
+## Themepack ##
+###############
+
+# Customisation
+set -goq @powerline-color-main-1 '#abb2bf'
+set -goq @powerline-color-main-2 '#abb2bf'
+set -goq @powerline-color-main-3 '#abb2bf'
+
+set -goq @powerline-color-black-1 black
+set -goq @powerline-color-grey-1 '#282c34' 
+set -goq @powerline-color-grey-2 '#4b5263'
+set -goq @powerline-color-grey-3 '#4b5263'
+set -goq @powerline-color-grey-4 '#5c6370'
+set -goq @powerline-color-grey-5 '#5c6370'
+set -goq @powerline-color-grey-6 '#abb2bf'
+
+set -goqF @powerline-status-left-area-right-fg "#{@powerline-color-main-1}"
+set -goqF @powerline-status-right-area-left-fg "#{@powerline-color-main-1}"
+
+# set -goq @themepack-status-left-area-left-prefix "#{?client_prefix,#[fg=colour1]#[bg=colour0],}"
+set -goq @themepack-status-right-area-left-format "%H:%M"
+set -goq @themepack-status-right-area-middle-format "%d-%m-%Y"
+
+set -g @themepack 'basic'
+set -g @themepack 'powerline/block/gray'
+
+############
+## Base16 ##
+############
+# set -g @plugin 'jatap/tmux-base16-statusline'
+# set -g @base16-statusline 'main'
+ 
+
 run -b '~/.tmux/plugins/tpm/tpm'
 
